--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
 	"devDependencies": {
 		"@nuxt/types": "^2.15.7",
 		"@nuxt/typescript-build": "^2.1.0",
-		"@nuxtjs/tailwindcss": "^4.2.0",
+		"@nuxtjs/tailwindcss": "^4.2.1",
+		"@nuxtjs/tailwindcss-tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+		"@tailwindcss/postcss7-compat": "^2.2.17",
 		"@types/jest": "^27.0.2",
 		"@vue/test-utils": "^1.2.1",
-		"autoprefixer": "^9",
+		"autoprefixer": "^10.4.0",
 		"babel-core": "7.0.0-bridge.0",
 		"babel-jest": "^27.0.5",
 		"jest": "^27.0.5",
-		"postcss": "^7",
-		"tailwindcss": "npm:@tailwindcss/postcss7-compat",
+		"postcss": "^8.3.11",
+		"tailwindcss": "^2.2.19",
 		"ts-jest": "^27.0.3",
 		"vue-jest": "^3.0.4"
 	}
